--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "NodeJS server that manages and delivers notifications for the luminate online product",
   "dependencies": {
     "express": "3.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "mongoose": "*"
   }
 }
